--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -142,3 +142,28 @@ footer {
   padding: 20px;
   color: #666;
 }
+
+.participants-section {
+  margin-top: 0.5em;
+  background: #f7f9fa;
+  border-radius: 6px;
+  padding: 0.5em 1em;
+}
+
+.participants-list {
+  margin: 0.25em 0 0 1em;
+  padding: 0;
+  list-style-type: disc;
+  color: #2d3a4a;
+}
+
+.participant-item {
+  margin-bottom: 0.15em;
+  font-size: 0.97em;
+}
+
+.no-participants {
+  color: #888;
+  font-style: italic;
+  margin: 0.25em 0 0 0;
+}
